[package]
name = "flash_attention_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "0.3.1", features = ["cuda"] }
candle-ext = "0.1.5"
candle-flash-attn = { version = "0.3.0", optional = true }
candle-flash-attn-v1 = { git = "https://github.com/huggingface/candle-flash-attn-v1"}
candle-nn = "0.3.1"
candle-transformers = { version = "0.3.1", features = ["cuda"] }
